# spwn

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.claude/skills/run-context-manager/: SKILL.md  build-app.sh
.claude/skills/run-spwn/: SKILL.md  build-app.sh
.github/: CODEOWNERS
.github/workflows/: docs.yml
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/src/content/docs/guides/: claude-sessions.md  context-composer.md  fork-and-rewind.md  parallel-sessions.md  projects.md  scheduled-tasks.md  services.md  settings.md  terminals.md
docs/src/content/docs/reference/: architecture.md  building.md
examples/compose-integration/: Dockerfile  README.md  docker-compose.yml  package.json  server.js  server.test.js  spwn.yaml
scripts/: gui.sh  release.sh
sidecar/: index.mjs  package-lock.json  package.json  test.mjs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checkpoints.rs  claude.rs  commands.rs  compose.rs  gitwt.rs  lib.rs  main.rs  scheduler.rs  settings.rs  state.rs  store.rs
src-tauri/src/projects/: mod.rs  scanner.rs  watcher.rs
src-tauri/src/pty/: launcher.rs  manager.rs  mod.rs
src-tauri/src/transcript/: mod.rs  parser.rs
src-tauri/tests/: pty_smoke.rs  rewind_branch_spike.rs  rmux_smoke.rs
src/lib/: ChatMirror.svelte  CheckpointList.svelte  ClaudePane.svelte  ContextComposer.svelte  InputBar.svelte  MergePanel.svelte  PaneManager.svelte  PermissionPrompt.svelte  ProjectTree.svelte  QuestionPicker.svelte  ScheduledTasks.svelte  ServicesPanel.svelte  Settings.svelte  Terminal.svelte  UpdateBanner.svelte  ipc.ts  stores.ts  types.ts  updater.ts
src/routes/: +page.svelte
